--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,43 @@
 #
 #    pip-compile requirements.in
 #
+aiofiles==23.2.1
+    # via gradio
+altair==5.1.2
+    # via gradio
+annotated-types==0.6.0
+    # via pydantic
+anyio==3.7.1
+    # via
+    #   fastapi
+    #   httpx
+    #   starlette
 appnope==0.1.3
     # via
     #   ipykernel
     #   ipython
 asttokens==2.4.1
     # via stack-data
+attrs==23.1.0
+    # via
+    #   jsonschema
+    #   referencing
 build==1.0.3
     # via pip-tools
 certifi==2023.11.17
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
-    # via pip-tools
+    # via
+    #   pip-tools
+    #   typer
+    #   uvicorn
+colorama==0.4.6
+    # via typer
 comm==0.2.0
     # via ipykernel
 contourpy==1.2.0
@@ -29,17 +52,51 @@ debugpy==1.8.0
 decorator==5.1.1
     # via ipython
 exceptiongroup==1.2.0
-    # via ipython
+    # via
+    #   anyio
+    #   ipython
 executing==2.0.1
     # via stack-data
+fastapi==0.104.1
+    # via gradio
+ffmpy==0.3.1
+    # via gradio
 filelock==3.13.1
-    # via torch
+    # via
+    #   huggingface-hub
+    #   torch
 fonttools==4.45.0
     # via matplotlib
 fsspec==2023.10.0
-    # via torch
+    # via
+    #   gradio-client
+    #   huggingface-hub
+    #   torch
+gradio==4.7.1
+    # via -r requirements.in
+gradio-client==0.7.0
+    # via gradio
+h11==0.14.0
+    # via
+    #   httpcore
+    #   uvicorn
+httpcore==1.0.2
+    # via httpx
+httpx==0.25.2
+    # via
+    #   gradio
+    #   gradio-client
+huggingface-hub==0.19.4
+    # via
+    #   gradio
+    #   gradio-client
 idna==3.4
-    # via requests
+    # via
+    #   anyio
+    #   httpx
+    #   requests
+importlib-resources==6.1.1
+    # via gradio
 ipykernel==6.27.0
     # via -r requirements.in
 ipython==8.17.2
@@ -47,9 +104,16 @@ ipython==8.17.2
 jedi==0.19.1
     # via ipython
 jinja2==3.1.2
-    # via torch
+    # via
+    #   altair
+    #   gradio
+    #   torch
 joblib==1.3.2
     # via scikit-learn
+jsonschema==4.20.0
+    # via altair
+jsonschema-specifications==2023.11.1
+    # via jsonschema
 jupyter-client==8.6.0
     # via ipykernel
 jupyter-core==5.5.0
@@ -58,14 +122,22 @@ jupyter-core==5.5.0
     #   jupyter-client
 kiwisolver==1.4.5
     # via matplotlib
+markdown-it-py==3.0.0
+    # via rich
 markupsafe==2.1.3
-    # via jinja2
+    # via
+    #   gradio
+    #   jinja2
 matplotlib==3.7.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   gradio
 matplotlib-inline==0.1.6
     # via
     #   ipykernel
     #   ipython
+mdurl==0.1.2
+    # via markdown-it-py
 mpmath==1.3.0
     # via sympy
 nest-asyncio==1.5.8
@@ -74,25 +146,39 @@ networkx==3.2.1
     # via torch
 numpy==1.26.2
     # via
+    #   altair
     #   contourpy
+    #   gradio
     #   matplotlib
     #   opencv-python
+    #   pandas
     #   scikit-learn
     #   scipy
     #   torchvision
 opencv-python==4.8.0.76
     # via -r requirements.in
+orjson==3.9.10
+    # via gradio
 packaging==23.2
     # via
+    #   altair
     #   build
+    #   gradio
+    #   gradio-client
+    #   huggingface-hub
     #   ipykernel
     #   matplotlib
+pandas==2.1.3
+    # via
+    #   altair
+    #   gradio
 parso==0.8.3
     # via jedi
 pexpect==4.8.0
     # via ipython
 pillow==10.1.0
     # via
+    #   gradio
     #   matplotlib
     #   torchvision
 pip-tools==7.3.0
@@ -107,8 +193,18 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
+pydantic==2.5.2
+    # via
+    #   fastapi
+    #   gradio
+pydantic-core==2.14.5
+    # via pydantic
+pydub==0.25.1
+    # via gradio
 pygments==2.17.2
-    # via ipython
+    # via
+    #   ipython
+    #   rich
 pyparsing==3.1.1
     # via matplotlib
 pyproject-hooks==1.0.0
@@ -117,22 +213,55 @@ python-dateutil==2.8.2
     # via
     #   jupyter-client
     #   matplotlib
+    #   pandas
+python-multipart==0.0.6
+    # via gradio
+pytz==2023.3.post1
+    # via pandas
+pyyaml==6.0.1
+    # via
+    #   gradio
+    #   huggingface-hub
 pyzmq==25.1.1
     # via
     #   ipykernel
     #   jupyter-client
+referencing==0.31.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.31.0
-    # via torchvision
+    # via
+    #   gradio
+    #   gradio-client
+    #   huggingface-hub
+    #   torchvision
+rich==13.7.0
+    # via typer
+rpds-py==0.13.1
+    # via
+    #   jsonschema
+    #   referencing
 scikit-learn==1.2.2
     # via -r requirements.in
 scipy==1.11.4
     # via scikit-learn
+semantic-version==2.10.0
+    # via gradio
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   asttokens
     #   python-dateutil
+sniffio==1.3.0
+    # via
+    #   anyio
+    #   httpx
 stack-data==0.6.3
     # via ipython
+starlette==0.27.0
+    # via fastapi
 sympy==1.12
     # via torch
 threadpoolctl==3.2.0
@@ -142,6 +271,10 @@ tomli==2.0.1
     #   build
     #   pip-tools
     #   pyproject-hooks
+tomlkit==0.12.0
+    # via gradio
+toolz==0.12.0
+    # via altair
 torch==2.1.0
     # via
     #   -r requirements.in
@@ -154,6 +287,8 @@ tornado==6.3.3
     # via
     #   ipykernel
     #   jupyter-client
+tqdm==4.66.1
+    # via huggingface-hub
 traitlets==5.13.0
     # via
     #   comm
@@ -162,12 +297,32 @@ traitlets==5.13.0
     #   jupyter-client
     #   jupyter-core
     #   matplotlib-inline
+typer[all]==0.9.0
+    # via
+    #   gradio
+    #   typer
 typing-extensions==4.8.0
-    # via torch
+    # via
+    #   altair
+    #   fastapi
+    #   gradio
+    #   gradio-client
+    #   huggingface-hub
+    #   pydantic
+    #   pydantic-core
+    #   torch
+    #   typer
+    #   uvicorn
+tzdata==2023.3
+    # via pandas
 urllib3==2.1.0
     # via requests
+uvicorn==0.24.0.post1
+    # via gradio
 wcwidth==0.2.12
     # via prompt-toolkit
+websockets==11.0.3
+    # via gradio-client
 wheel==0.41.3
     # via pip-tools
 
