prueba videos cliente

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ attrs==23.1.0
     #   referencing
 build==1.0.3
     # via pip-tools
+cachetools==5.3.2
+    # via google-auth
 certifi==2023.11.17
     # via
     #   httpcore
@@ -72,6 +74,19 @@ fsspec==2023.10.0
     #   gradio-client
     #   huggingface-hub
     #   torch
+google-api-core==2.15.0
+    # via google-api-python-client
+google-api-python-client==2.86.0
+    # via -r requirements.in
+google-auth==2.25.2
+    # via
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+googleapis-common-protos==1.62.0
+    # via google-api-core
 gradio==4.7.1
     # via -r requirements.in
 gradio-client==0.7.0
@@ -82,6 +97,10 @@ h11==0.14.0
     #   uvicorn
 httpcore==1.0.2
     # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httpx==0.25.2
     # via
     #   gradio
@@ -187,12 +206,22 @@ platformdirs==4.0.0
     # via jupyter-core
 prompt-toolkit==3.0.41
     # via ipython
+protobuf==4.25.1
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
 psutil==5.9.6
     # via ipykernel
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
+pyasn1==0.5.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.3.0
+    # via google-auth
 pydantic==2.5.2
     # via
     #   fastapi
@@ -206,7 +235,9 @@ pygments==2.17.2
     #   ipython
     #   rich
 pyparsing==3.1.1
-    # via matplotlib
+    # via
+    #   httplib2
+    #   matplotlib
 pyproject-hooks==1.0.0
     # via build
 python-dateutil==2.8.2
@@ -232,6 +263,7 @@ referencing==0.31.0
     #   jsonschema-specifications
 requests==2.31.0
     # via
+    #   google-api-core
     #   gradio
     #   gradio-client
     #   huggingface-hub
@@ -242,6 +274,8 @@ rpds-py==0.13.1
     # via
     #   jsonschema
     #   referencing
+rsa==4.9
+    # via google-auth
 scikit-learn==1.2.2
     # via -r requirements.in
 scipy==1.11.4
@@ -315,6 +349,8 @@ typing-extensions==4.8.0
     #   uvicorn
 tzdata==2023.3
     # via pandas
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==2.1.0
     # via requests
 uvicorn==0.24.0.post1
