--- a/requirements.in
+++ b/requirements.in
@@ -7,7 +7,7 @@ matplotlib==3.7.1
 torchsummary==1.5.1
 pip-tools==7.3.0
 ipykernel==6.27.0
-gradio
+gradio==4.13.0
 google-api-python-client==2.86.0
 wandb==0.16.1
 memory_profiler
